# hackathon-2-todo-app

./: .gitignore  CLAUDE.md  README-k8s.md  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  chatkit_server.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/agents/: __init__.py  base.py  completion_agent.py  context_agent.py  crud_agent.py  orchestrator.py  query_agent.py
backend/auth/: __init__.py  dependencies.py
backend/mcp_server/: __init__.py  schemas.py  tools.py
backend/routes/: __init__.py  auth.py  chat.py  chatkit.py  chatkit_session.py  tasks.py
backend/skills/: __init__.py  base.py  confirmation_generator.py  context_builder.py  error_handler.py  filter_mapper.py  id_resolver.py  task_parser.py
backend/tests/: README.md  __init__.py  conftest.py  test_models.py  test_routes_tasks.py  test_schemas.py  test_skill_confirmation_generator.py  test_skill_context_builder.py  test_skill_error_handler.py  test_skill_filter_mapper.py  test_skill_id_resolver.py  test_skill_task_parser.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
helm-chart/: Chart.yaml  values-local.yaml  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  secrets.yaml
phase-1-console/src/: cli.py  main.py  storage.py
scripts/: deploy-minikube.ps1  deploy-minikube.sh
specs/: constitution.md
specs/phase-1/: plan.md  spec.md  (+1 more)
src/: models.py
tests/: test_models.py
(+35 files in other folders)
