[project]
name = "todo-backend"
version = "3.0.0"
description = "Phase III: AI Chatbot with Multi-Agent Architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "openai>=1.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]
